[gd_scene load_steps=7 format=2]

[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/theme/flappy.theme" type="Theme" id=2]
[ext_resource path="res://client/fonts/DelaGothicOne-32.tres" type="DynamicFont" id=3]
[ext_resource path="res://client/world/player/huah.ogg" type="AudioStream" id=4]
[ext_resource path="res://client/menu/options/options.gd" type="Script" id=5]
[ext_resource path="res://client/ui/title_label.tscn" type="PackedScene" id=6]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 5 )
master_slider_path = NodePath("CenterContainer/GridContainer/Volume/MasterVolume/MasterSlider")
master_percent_path = NodePath("CenterContainer/GridContainer/Volume/MasterVolume/Percent")
music_slider_path = NodePath("CenterContainer/GridContainer/Volume/MusicVolume/MusicSlider")
music_percent_path = NodePath("CenterContainer/GridContainer/Volume/MusicVolume/Percent")
sounds_slider_path = NodePath("CenterContainer/GridContainer/Volume/SoundsVolume/SoundsSlider")
sounds_percent_path = NodePath("CenterContainer/GridContainer/Volume/SoundsVolume/Percent")
resolution_options_path = NodePath("CenterContainer/GridContainer/Graphics/GridContainer/ResolutionOptionButton")
fullscreen_button_path = NodePath("CenterContainer/GridContainer/Graphics/GridContainer/FullscreenCheckButton")
vsync_button_path = NodePath("CenterContainer/GridContainer/Graphics/GridContainer/VsyncCheckButton")
high_score_label_path = NodePath("CenterContainer/GridContainer/Gameplay/VBoxContainer/HBoxContainer/HighScore")

[node name="Title" parent="." instance=ExtResource( 6 )]
margin_top = -10.0
margin_bottom = 107.0
text = "Options"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 310.0
margin_top = 401.0
margin_right = 1590.0
margin_bottom = 659.0
custom_constants/vseparation = 10
custom_constants/hseparation = 40
columns = 3

[node name="Graphics" type="VBoxContainer" parent="CenterContainer/GridContainer"]
margin_right = 400.0
margin_bottom = 258.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="CenterContainer/GridContainer/Graphics"]
margin_right = 400.0
margin_bottom = 48.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Graphics"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer/GridContainer/Graphics"]
margin_left = 64.0
margin_top = 68.0
margin_right = 336.0
margin_bottom = 173.0
size_flags_horizontal = 6
custom_constants/hseparation = 15
columns = 2

[node name="FullscreenLabel" type="Label" parent="CenterContainer/GridContainer/Graphics/GridContainer"]
margin_top = 5.0
margin_right = 102.0
margin_bottom = 29.0
theme = ExtResource( 2 )
text = "Fullscreen"

[node name="FullscreenCheckButton" type="CheckButton" parent="CenterContainer/GridContainer/Graphics/GridContainer"]
margin_left = 157.0
margin_right = 231.0
margin_bottom = 35.0
size_flags_horizontal = 4
theme = ExtResource( 2 )

[node name="VsyncLabel" type="Label" parent="CenterContainer/GridContainer/Graphics/GridContainer"]
margin_top = 44.0
margin_right = 102.0
margin_bottom = 68.0
theme = ExtResource( 2 )
text = "VSync"

[node name="VsyncCheckButton" type="CheckButton" parent="CenterContainer/GridContainer/Graphics/GridContainer"]
margin_left = 157.0
margin_top = 39.0
margin_right = 231.0
margin_bottom = 74.0
size_flags_horizontal = 4
theme = ExtResource( 2 )

[node name="ResolutionLabel" type="Label" parent="CenterContainer/GridContainer/Graphics/GridContainer"]
margin_top = 79.0
margin_right = 102.0
margin_bottom = 103.0
theme = ExtResource( 2 )
text = "Resolution"

[node name="ResolutionOptionButton" type="OptionButton" parent="CenterContainer/GridContainer/Graphics/GridContainer"]
margin_left = 117.0
margin_top = 78.0
margin_right = 272.0
margin_bottom = 105.0
rect_min_size = Vector2( 155, 0 )
theme = ExtResource( 2 )
text = "1920x1080"
align = 1

[node name="Volume" type="VBoxContainer" parent="CenterContainer/GridContainer"]
margin_left = 440.0
margin_right = 840.0
margin_bottom = 258.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 20

[node name="Header" type="Label" parent="CenterContainer/GridContainer/Volume"]
margin_right = 400.0
margin_bottom = 48.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="Control" parent="CenterContainer/GridContainer/Volume"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="CenterContainer/GridContainer/Volume/MasterVolume"]
margin_right = 144.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "Master"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="CenterContainer/GridContainer/Volume/MasterVolume"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -53.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "100%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="CenterContainer/GridContainer/Volume/MasterVolume"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -208.5
margin_top = -16.0
margin_right = 208.5
theme = ExtResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="Control" parent="CenterContainer/GridContainer/Volume"]
margin_top = 138.0
margin_right = 400.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="CenterContainer/GridContainer/Volume/MusicVolume"]
margin_right = 144.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="CenterContainer/GridContainer/Volume/MusicVolume"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -53.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "80%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="CenterContainer/GridContainer/Volume/MusicVolume"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -208.5
margin_top = -16.0
margin_right = 208.5
theme = ExtResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundsVolume" type="Control" parent="CenterContainer/GridContainer/Volume"]
margin_top = 208.0
margin_right = 400.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="CenterContainer/GridContainer/Volume/SoundsVolume"]
margin_right = 144.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "Sound Effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="CenterContainer/GridContainer/Volume/SoundsVolume"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -53.0
margin_bottom = 24.0
theme = ExtResource( 2 )
text = "80%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundsSlider" type="HSlider" parent="CenterContainer/GridContainer/Volume/SoundsVolume"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -208.5
margin_top = -16.0
margin_right = 208.5
theme = ExtResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 21
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameplay" type="VBoxContainer" parent="CenterContainer/GridContainer"]
margin_left = 880.0
margin_right = 1280.0
margin_bottom = 258.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="CenterContainer/GridContainer/Gameplay"]
margin_right = 400.0
margin_bottom = 48.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Gameplay"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/GridContainer/Gameplay"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 129.0
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/GridContainer/Gameplay/VBoxContainer"]
margin_right = 400.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="CenterContainer/GridContainer/Gameplay/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
theme = ExtResource( 2 )
text = "High Score:"

[node name="HighScore" type="Label" parent="CenterContainer/GridContainer/Gameplay/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 400.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "0"

[node name="ResetHighScoreButton" type="Button" parent="CenterContainer/GridContainer/Gameplay/VBoxContainer"]
margin_top = 34.0
margin_right = 400.0
margin_bottom = 61.0
theme = ExtResource( 2 )
text = "Reset High Score"

[node name="SoundsVolumeTester" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="BackButton" parent="." instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -75.0
margin_right = 177.0
margin_bottom = 5.0
rect_min_size = Vector2( 177, 80 )
label = "Back"
alignment = 1

[node name="ResetButton" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -141.5
margin_top = -80.0
margin_right = 141.5
margin_bottom = 0.0
grow_horizontal = 2
rect_min_size = Vector2( 283, 80 )
label = "Reset All"
alignment = 1

[connection signal="pressed" from="CenterContainer/GridContainer/Gameplay/VBoxContainer/ResetHighScoreButton" to="." method="_on_ResetHighScoreButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
